# single-webpage-project

./: .gitignore  .pre-commit-config.yaml  Algorithm.txt  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  store_test_results.sh
.github/workflows/: ci-testing.yml
project/: README.md  index.html
report/: old_test_results.txt  report.html  test_results.txt
tests/: test_css_requirements.py  test_general_requirements.py  test_html_requirements.py  test_pytest_results.py
tests/css_grid_project/: basic-grid.html  photo-grid.css
tests/large_project/: index.html
webanalyst/: CSSReport.py  HTMLReport.py  get_pytest_results.py  project-requirements.md  report.py  report_template.html
